loki/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: loki
spec:
  replicas: 1
  podManagementPolicy: OrderedReady
  serviceName: loki-headless
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: loki
          image: index.docker.io/grafana/loki:2.4.2
          command: ['loki']
          args:
            - "-config.file=/etc/loki/loki.yaml"
          volumeMounts:
            - name: data
              mountPath: /data
            - name: loki-config
              mountPath: /etc/loki
          ports:
            - containerPort: 3100
