loki/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: loki
      protocol: TCP
      port: 3100
---
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  namespace: loki
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: loki
