loki/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  namespace: loki
spec:
  tls:
  - hosts:
      - loki.lab.home
    secretName: loki-tls
  rules:
  - host: loki.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki
            port:
              number: 3100
